# ggmail

./: .coveragerc  .flake8  LICENSE  Makefile  README.md  cliff.toml  pyproject.toml  release.sh
.github/workflows/: cd.yml  ci.yml
ggmail/: __init__.py  account.py  authentication.py  exception.py  flag.py  mailbox.py  message.py  policy.py  stackoverflow.py  utf7.py
tests/: conftest.py  test_account.py  test_authentification.py  test_mailbox.py  test_message.py  test_policy.py  test_utf7.py
