[tool.poetry]
name = "ggmail"
version = "0.2.0"
description = "Manage gmail account using python, forget about imap and just code what you supposed to do."
authors = ["dylandoamaral <do.amaral.dylan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
pydantic = "*"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.2"
isort = "^5.7.0"
pytest = "^5.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
