[tool.poetry]
name = "ggmail"
version = "0.4.0"
description = "Manage gmail account using python, forget about imap and just code what you supposed to do."
authors = ["dylandoamaral <do.amaral.dylan@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dylandoamaral/ggmail"
documentation = "https://github.com/dylandoamaral/ggmail/wiki"
keywords = ["python", "library", "simple", "imap", "human", "pydantic"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
